--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "firebase": "^10.12.2",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
